--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div class="navigation">
-  <a routerLink="/movies/popular">popular</a>
-  <a routerLink="/movies/top_rated">top rated</a>
-  <a routerLink="/movies/upcoming">upcoming</a>
+  <a routerLink="/movies/popular" routerLinkActive="esteLinkEstaActivo">popular</a>
+  <a routerLink="/movies/top_rated" routerLinkActive="esteLinkEstaActivo">top rated</a>
+  <a routerLink="/movies/upcoming" routerLinkActive="esteLinkEstaActivo">upcoming</a>
 </div>
